k8s-resource/route/http-nonhost.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-http
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: http-svc
          servicePort: 80
